--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ disqus_shortname: daijiansblog
 # ga_tracking_id: "UA-XXXX-1"
 
 # Category descriptions (for archive pages)
-descriptions:
+descriptions: 
   - cat: sprd
     desc: "sprd platfrom"
 
@@ -79,7 +79,7 @@ social:
     icon: weibo
     username: daigege
     url: http://weibo.com/daigege
-    desc: ¹Ø×¢ÎÒµÄÎ¢²©
+    desc: follow my weibo
     share_url: //weibo.com/share
     share_title: ?title=
     share_link: "&amp;url="
